Squash pencilcheck changes together Untrack log files
Should mimic how Page is setup in Page#start

https://github.com/voltrb/volt/blob/5135cacb7eda17fe3d4b6863b7f0c6c355f5129d/lib/volt/page/page.rb

Hardcoding now but it was calling the wrong controller instance

Simple data binding test

Use jquery ui cdn

Document.ready? works

--- a/example/app/components/date_select/views/main/index.html
+++ b/example/app/components/date_select/views/main/index.html
@@ -1,3 +1,4 @@
 <:Body>
   Date Picker
-  <input type="text" class="volt-date-picker">
+  <input type="text" class="volt-date-picker" value="{{ _test }}">
+  <span>{{ _test }}</span>
